static/css/parts/ViewletProblems.css
.Problems {
  color: var(--WorkbenchForeground);
}

.ProblemList {
  width: 100%;
  height: 100%;
  contain: strict;
}

.Problem {
  display: flex;
  contain: strict;
  height: 20px;
  width: 100%;
  gap: 5px;
  align-items: center;
}

.ProblemsErrorIcon {
  width: 17px;
  height: 17px;
  contain: strict;
  color: var(--ProblemsErrorIconForeground, #b64e4e);
  mask-repeat: no-repeat;
  mask-size: 100%;
  mask-position: 50% 50%;
  background: currentColor;
}

.Message {
  padding-left: 20px;
  line-height: 22px;
  width: 100%;
  height: 100%;
  contain: strict;
}

